Fixed bug in FF / Chrome that made plugins without defined GUI text-wrap and hence shink when dragged over the edge of the canvas view.

--- a/style/main.css
+++ b/style/main.css
@@ -95,6 +95,7 @@ pre
 	padding: 4px;
 	cursor: move;
 	position: absolute;
+	white-space: nowrap;
 }
 
 .pl_layout
